Benchmark allows querying multiple IDs